--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: git config --global user.email "psobusiak@gmail.com"
+    - run: git config --global user.name "Piotr Sobusiak"
     - run: npm run deploy
       env:
         CI: true
