--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,7 @@ jobs:
     - run: npm install
     - run: git config --global user.email "psobusiak@gmail.com"
     - run: git config --global user.name "psobusiak"
+    - run: git remote add origin https://github.com/psobusiak/applover-pgf.git
     - run: npm run deploy
       env:
         CI: true
