--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,13 @@ jobs:
     - run: npm install
     - run: git config --global user.email "psobusiak@gmail.com"
     - run: git config --global user.name "psobusiak"
-    - run: git remote add origin https://github.com/psobusiak/applover-pgf.git
-    - run: npm run deploy
+    - run: gatsby build --prefix-paths
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        # github_token: ${{ secrets.GITHUB_TOKEN }}
+        # personal_token: ${{ secrets.PERSONAL_TOKEN }}
+        publish_dir: ./public
       env:
         CI: true
