--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
     - run: npm install
     - run: git config --global user.email "psobusiak@gmail.com"
     - run: git config --global user.name "psobusiak"
-    - run: gatsby build --prefix-paths
+    - run: ./node_modules/.bin/gatsby build --prefix-paths
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
