Fix gh-pages deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,13 @@ cache:
   paths:
     - node_modules/
 
-pages:
+static page:
+  stage: deploy
   script:
     - npm i
-    - ./node_modules/.bin/gatsby build --prefix-paths
+    - git config user.name ${GH_ACTOR_NAME}
+    - git config user.email ${GH_ACTOR_EMAIL}
+    - ./node_modules/.bin/gatsby build --prefix-paths && ./node_modules/.bin/gh-pages -d public -r https://${GH_TOKEN}@github.com/${GH_REPOSITORY}.git
   artifacts:
     paths:
       - public
